<resources>
    <string name="app_name">Health-e-Checker</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="enter_email_id">Enter email-Id</string>
    <string name="enter_password">Enter password</string>
    <string name="logout">LOGOUT</string>
    <string name="scanner">SCANNER</string>
    <string name="scan_now">SCAN NOW</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_nurse_id">Enter nurse-Id</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_gender">Enter gender</string>
    <string name="verify">VERIFY</string>
    <string name="add_patient">Add Patient</string>
    <string name="shaoni_mukherjee">Shaoni Mukherjee</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>